--- a/golink-web/styles/Home.module.css
+++ b/golink-web/styles/Home.module.css
@@ -24,7 +24,6 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  justify-content: center;
   align-items: center;
 }
 
@@ -72,6 +71,6 @@
   color: #555;
 }
 
-.reportLink {
+.link {
   color: rgb(29, 138, 246);
 }
